# shadertoy

./: .gitignore  CMakeLists.txt  README.md  glsl_compile.sh  wenv  wmake
cmake_modules/: FindSFML.cmake
glsl/: fragment-footer.glsl  fragment-header.glsl  fragment-shader.glsl  header.glsl  vertex-shader.glsl
shaders/: truchet.glsl  tunnel.glsl
src/: glsc-strings.h  glsl-strings.h  main.cpp
